--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
     "api": "json-server db.json --host 0.0.0.0 --port 3001"
   },
   "dependencies": {
+    "@react-native-vector-icons/evil-icons": "^12.0.1",
+    "@react-native-vector-icons/fontawesome": "^12.0.1",
+    "@react-native-vector-icons/fontawesome6": "^12.0.1",
+    "@react-native-vector-icons/get-image": "^12.0.1",
     "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-pager-view": "^6.8.1",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
+    "react-native-tab-view": "^4.1.2",
+    "react-native-toast-message": "^2.3.3",
     "react-redux": "^9.2.0",
     "styled-components": "^6.1.19"
   },
