--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
-    "@reduxjs/toolkit": "^2.8.2",
+    "@testing-library/react-native": "^13.2.0",
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
@@ -44,14 +44,19 @@
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "@types/redux-mock-store": "^1.5.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "json-server": "^1.0.0-beta.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
+    "redux-mock-store": "^1.5.5",
+    "redux-thunk": "^3.1.0",
     "typescript": "5.0.4"
   },
   "engines": {
