--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "@sentry/react-native": "^6.16.1",
     "@testing-library/react-native": "^13.2.0",
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-pager-view": "^6.8.1",
     "react-native-safe-area-context": "^5.5.1",
@@ -47,6 +49,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^19.1.0",
     "@types/redux-mock-store": "^1.5.0",
     "eslint": "^8.19.0",
