--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react-native": "^13.2.0",
     "axios": "^1.10.0",
     "react": "19.1.0",
+     "json-server": "^0.17.4",
     "react-native": "0.80.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.1",
