Adjust pagination and make tests

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@sentry/react-native": "^6.16.1",
     "@testing-library/react-native": "^13.2.0",
     "axios": "^1.10.0",
+    "json-server": "^0.17.4",
     "react": "19.1.0",
-     "json-server": "^0.17.4",
     "react-native": "0.80.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.1",
@@ -48,6 +48,7 @@
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-native-dotenv": "^0.2.2",
